2006-05-26  Craig James <cjames@emolecules.com>

	* src/mol.h Added UnsetHash() and UnsetWedge() macros.
	
2006-05-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.cpp (AddChemObject): Output a warning when a
        format is WRITEONEONLY and more molecules are coming. Fixes
        PR#1473192.

	* src/formats/mdlformat.cpp (ReadMolecule): Make sure to grab all
        lines of potentially multi-line properties. Fixes PR#1489209.
	
	* src/formats/smilesformat.cpp (ParseSimple): Change behavior when
	encountering a bond between two potential radical or aromatic
	atoms. Previously marked bond as double, now mark as 5 -
	potentially aromatic bond. Appears to fix PR#1493148.

	* src/kekulize.cpp (NewPerceiveKekuleBonds): Make sure that
	bestorden is reset when traversing cycle. Previous code would only
	check one atom for adding extra electrons. Appears to fix
	part of PR#1445453.
	(expandcycle): Ensure a bond is in a ring before expanding. Fixes
	part of PR#1445453 for 1-phenyl-1H-pyrrole.

	* test/aromatest.cpp: Make sure to test that all ring bonds are
	aromatic to confirm that above bugs do not come back.

	* test/files/aromatics.smi: Add additional test cases for above
	bugs.

	* test/ringtest.cpp, test/smartstest.cpp: Update so that
	generating results is aware of test directory.

	* test/generate.sh: Shortcut to properly generate test results
	under "make check" conditions.

	* test/files/smartsresults.txt: Update after all of todays changes.

2006-05-25  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/main.cpp, tools/*.cpp, test/*.cpp: Added USING_DLL
	declarations for WIN32 compiles. Thanks to Noel and Donald Curtis
	for pointing out Cygwin problems.

	* src/Makefile.am, src/Makefile.in: Add missing -no-undefined for
	Cygwin compilation.

	* src/formats/Makefile.am, src/formats/Makefile.in: Add missing
	obmolecformat.cpp for Cygwin compilation.

2006-05-24  Geoffrey Hutchison  <babel@geoffhutchison.net>
